--- a/BookStore/appsettings.json
+++ b/BookStore/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1;Port=5432;Userid=postgres;Password=super;Database=BookStoreApp"
-
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BookStore-cce58192-04b5-4fd5-9636-f2d56a6ae793;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
