--- a/integrated_systems/BookStore/BookStore.csproj
+++ b/integrated_systems/BookStore/BookStore.csproj
@@ -28,4 +28,6 @@
     <ProjectReference Include="..\Service\Service.csproj" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties wwwroot_4lib_4bootstrap_4dist_4js_4bootstrap_1bundle_1js_1map__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
